// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should should toggle to no-preference 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "selected": "no-preference",
  },
}
`;

exports[`reducer should should toggle to reduce 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "selected": "reduce",
  },
}
`;

exports[`reducer should should toggle with system settings 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "selected": "reduce",
  },
}
`;
